# MAT

./: .gitignore  LICENSE  MANIFEST.in  pyproject.toml  requirements.txt  setup.py
MAT/: __init__.py  __main__.py
MAT/pipelines/: __init__.py
MAT/pipelines/Book/: __init__.py
MAT/pipelines/Podcast/: __init__.py
MAT/tools/: __init__.py
MAT/tools/diarizators/: __init__.py
MAT/tools/diarizators/nemo/: __init__.py
MAT/tools/ner/: __init__.py
MAT/tools/ner/ner_gliner/: __init__.py
MAT/tools/speakeridentification/: __init__.py
MAT/tools/speakeridentification/pyannote/: __init__.py
MAT/tools/speakeridentification/speech_brain/: __init__.py
MAT/tools/summary/: __init__.py
MAT/tools/summary/llm/: __init__.py  prompts.py
MAT/tools/text_splitter/: __init__.py
MAT/tools/text_splitter/spacy/: __init__.py
MAT/tools/transcriptors/: __init__.py
MAT/tools/transcriptors/whisper/: __init__.py
MAT/utils/: __init__.py
MAT/utils/config/: __init__.py
MAT/utils/diarization/: __init__.py
MAT/utils/progress/: __init__.py
MAT/writer/: __init__.py
