[project]
name = "mat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "deepmultilingualpunctuation>=1.0.1",
    "ebooklib>=0.20",
    "faster-whisper>=1.1.0",
    "gliner>=0.2.22",
    "gliner2>=1.2.3",
    "huggingface-hub>=0.36.0",
    "langchain>=1.2.1",
    "langchain-classic>=1.0.1",
    "langchain-openai>=1.1.6",
    "langdetect>=1.0.9",
    "nemo-toolkit[asr]>=2.2.1",
    "numpy==1.26.4",
    "nvidia-cudnn-cu11>=9.10.2.21",
    "nvidia-pyindex>=1.0.9",
    "pip>=25.3",
    "psutil>=7.2.1",
    "pyannote-audio>=3.3.2",
    "pydantic>=2.12.5",
    "pydub>=0.25.1",
    "python-levenshtein>=0.27.3",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "roman>=5.2",
    "rttm-manager>=0.1.8",
    "scikit-learn>=1.8.0",
    "scipy>=1.16.3",
    "spacy>=3.7.5",
    "spacy-download>=1.1.0",
    "spacy-transformers>=1.3.9",
    "speechbrain>=1.0.3",
    "tiktoken>=0.12.0",
    "torch>=2.9.1",
    "torchaudio>=2.9.1",
    "torchvision>=0.24.1",
    "tqdm>=4.67.1",
    "whisperx>=3.3.1",
    "xlsxwriter>=3.2.9",
]

[tool.uv.extra-build-dependencies]
nvidia-pyindex = ["pip"]
